# Jules

./: .gitignore  AGENT.md  JULES.md  MODULO_11_SPEC.md  README.md  ROADMAP.md  alembic.ini  config.toml  context.md  jules_benchmark.py  jules_chat.py  jules_tui_mockup.html  pyproject.toml  skills-lock.json  spike_embeddings.py  test_external.py  test_interactive_router.py  test_provider.py
.pi/: settings.json
.pi-lens/: change-log.jsonl  code-quality-warnings.jsonl  turn-state.json
.pi-lens/cache/: code-quality-warnings.json  code-quality-warnings.meta.json  knip.meta.json  project-snapshot.json  project-snapshot.meta.json  python-rules-v2.json  review-graph.json  session-start-guidance.meta.json  todo-baseline.meta.json  turn-end-findings-last.json  turn-end-findings-last.meta.json  turn-end-findings.meta.json
alembic/: env.py
alembic/versions/: 123f8dc39e81_roadmap_session_context_orm.py  2f1285caf28f_add_chat_history.py  db91a0ae1c2b_initial_schema.py  fed68f886721_add_shell_to_session_contexts.py
jules-tui/: Cargo.toml
jules-tui/src/: app.rs  ipc.rs  main.rs  ui.rs
jules-tui/src/widgets/: chat_log.rs  input_bar.rs  mod.rs  model_picker.rs  sidebar.rs  status_bar.rs
jules.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
jules/auth/: __init__.py  base.py  claude.py  openai.py  registry.py
jules/cli/: app.py  commands.py  main.py  palette.py  theme.tcss  theme_terminal.tcss
jules/core/: __init__.py  auth_pkce.py  config.py  context.py  events.py  permissions.py  provider_registry.py  router.py  session.py
jules/linux/: doctor.py  shell.py  watcher.py
jules/memory/: engine.py  episodic.py  models.py  persistent.py  scoring.py
jules/models/: __init__.py  chat_history.py
jules/personality/: loader.py
jules/providers/: __init__.py  antigravity.py  base.py  codex.py  google.py  ollama.py  openai_oauth.py  opencode.py  openrouter.py
jules/sanitizer/: sanitizer.py
jules/server/: __main__.py  handlers.py  protocol.py  server.py
openspec/: config.yaml
sdd/: module-1-sanitizer-apply-pr2.md  module-1-sanitizer-archive.md  module-1-sanitizer-package-validation.md  module-1-sanitizer-verify-rerun.md  module-1-sanitizer-verify.md
(+107 files in other folders)
